--- a/videos.html
+++ b/videos.html
@@ -18,6 +18,7 @@
           <i class="fa-solid fa-bars" aria-hidden="true"></i>
         </button>
         <div id="menu-panel" class="menu-panel" hidden>
+          <a class="menu-item" href="./index.html"><i class="fa-solid fa-images" aria-hidden="true"></i><span>Experiences</span></a>
           <a class="menu-item" href="./scenarios.html"><i class="fa-solid fa-list-ul" aria-hidden="true"></i><span>Scenarios</span></a>
           <a class="menu-item" href="./videos.html" aria-current="page"><i class="fa-brands fa-youtube" aria-hidden="true"></i><span>Videos</span></a>
         </div>
