--- a/videos.html
+++ b/videos.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <header class="site-header">
@@ -34,8 +34,8 @@
 
     <footer class="site-footer">I love you</footer>
 
-    <script src="./nav.js" defer></script>
-    <script src="./videos.js" defer></script>
+    <script src="./scripts/nav.js" defer></script>
+    <script src="./scripts/videos.js" defer></script>
   </body>
   </html>
 
